Fix BT2020 constant luminance

Multiple bugs, primary one was doing the order of operations backwards.

BUG=823786

Change-Id: Id03b1190855ffd06e4b6b4dcadf4421fcd9e48af
Reviewed-on: https://chromium-review.googlesource.com/967345
Reviewed-by: ccameron <ccameron@chromium.org>
Commit-Queue: Fredrik Hubinette <hubbe@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544522}
Former-commit-id: 9c5455a2ef3db862d8b91c94095d2d52933cd529